# restc-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  build_externals.sh  build_externals_vc2015.bat  build_externals_vc2017.bat  build_vc2015.bat  build_vc2017.bat  build_vc2019_x64_vcpkg.bat  build_vc2019_x86_vcpkg.bat  config.h.template  create-and-run-containers.sh  stop-containers.sh
.github/workflows/: ci.yaml
ci/jenkins/: Dockefile.debian-bookworm  Dockefile.debian-bullseye  Dockefile.debian-buster  Dockefile.debian-testing  Dockefile.debian-trixie  Dockefile.ubuntu-bionic  Dockefile.ubuntu-hippo  Dockefile.ubuntu-jammy  Dockefile.ubuntu-jellyfish  Dockefile.ubuntu-xenial  Dockerfile.centos7  Dockerfile.debian-stretch  Dockerfile.fedora  Dockerfile.ubuntu-bionic  Dockerfile.ubuntu-noble  Dockerfile.ubuntu-plucky  Dockerfile.ubuntu-resolute  Jenkinsfile.groovy
ci/mock-backends/: docker-compose.yml
ci/mock-backends/json/: Dockerfile
ci/mock-backends/nginx/: Dockerfile  test-key.pem  test.pem
ci/mock-backends/squid/: Dockerfile
ci/vcpkg/: vcpkg.json
cmake_scripts/: boost.cmake  doxygen.cmake  external-projects.cmake  install.cmake  pch.cmake  restc-cppConfig.cmake.in
conan/: Readme.md  build_gcc.sh  build_with_conan_vc2015.bat  conanfile.txt
doc/: GettingStarted.md  Logging.md  RunningTheTests.md  Tutorial.md  doxygen-mainpage.md
examples/: logip.cpp
examples/cmake_external_project/: CMakeLists.txt  readme.md
examples/cmake_external_project/cmake/: external-projects.cmake
examples/cmake_normal/: CMakeLists.txt  readme.md
examples/cmake_normal/cmake/: Findrestc-cpp.cmake
examples/cmdline/: build.sh  main.cpp  readme.md
examples/graphapi/: CMakeLists.txt  main.cpp
examples/logip/: CMakeLists.txt  logip.cpp
include/restc-cpp/: Connection.h  ConnectionPool.h  DataReader.h  DataReaderStream.h  DataWriter.h  IoTimer.h  IteratorFromJsonSerializer.h  RapidJsonReader.h  RapidJsonWriter.h  RequestBody.h  RequestBodyWriter.h  RequestBuilder.h  Serialize.h  SerializeJson-cpp17.h  SerializeJson.h  Socket.h  Url.h  boost_compatibility.h  config.h  error.h  helper.h  logging.h  restc-cpp.h  test_helper.h  typename.h  url_encode.h
include/restc-cpp/internals/: for_each_member.hpp  helpers.h
jenkins/ubuntu-16.4/: Dockerfile
src/: Body.cpp  CMakeLists.txt  ChunkedReaderImpl.cpp  ChunkedWriterImpl.cpp  ConnectionImpl.h  ConnectionPoolImpl.cpp  DataReader.h  DataReaderImpl.cpp  DataReaderStream.cpp  IoReaderImpl.cpp  IoWriterImpl.cpp  NoBodyReaderImpl.cpp  PlainReaderImpl.cpp  PlainWriterImpl.cpp  ReplyImpl.cpp  ReplyImpl.h  RequestBodyFileImpl.cpp  RequestBodyStringImpl.cpp  RequestImpl.cpp  RestClientImpl.cpp  SocketImpl.h  TlsSocketImpl.h  Url.cpp  ZipReaderImpl.cpp  boost_compitability.cpp  logging.cpp  pch.cpp  url_encode.cpp
tests/: 1000ConnectionsTest.cpp  AsyncSleepTests.cpp  AuthTest.cpp  BasicTests.cpp  CMakeLists.txt  CRUD_test.cpp  ConnectionCacheTests.cpp  HttpReplyTests.cpp  HttpsTest.cpp  InsertSerializerTest.cpp  JsonSerializeTests.cpp  OwnIoserviceTests.cpp  ReadmeTests.cpp  RedirectTests.cpp  UploadTests.cpp  UrlTests.cpp  restc_cpp_testing.h  run-tests.sh  run-unit-tests.sh
tests/functional/: AuthTest.cpp  BasicTests.cpp  CMakeLists.txt  CRUD_test.cpp  Calculator.cpp  ConnectionCacheTests.cpp  ConnectionPoolInstancesTest.cpp  CookieTests.cpp  Evenorodd.cpp  HttpsTest.cpp  InsertSerializerTest.cpp  ManyConnectionsTest.cpp  OwnIoserviceTests.cpp  PropertiesTests.cpp  ProxyTests.cpp  ReadmeTests.cpp  RedirectTests.cpp  UploadTests.cpp  VowelConsonant.cpp  discriminant.cpp
tests/mock-json/: Dockerfile  build_and_run.sh
tests/mock-nginx/: Dockerfile  README.md  build_and_run.sh  create_cert.sh  proxy.conf
tests/mock-server/: Dockerfile  README.md  run.sh  runmockserver
tests/mock-squid/: Dockerfile  build_and_run.sh
tests/unit/: AsyncSleepTests.cpp  CMakeLists.txt  HttpReplyTests.cpp  Iostream2JsonTests.cpp  JsonSerializeTests.cpp  ProxyDetectionTests.cpp  RequestBuilder.cpp  UrlTests.cpp
